# alp-net

./: .env.example  .gitignore  Know.md  Makefile  README.md  docker-compose.yml  pyproject.toml
alpnet/api/: app.py  dependencies.py
alpnet/api/routes/: admin.py  chat.py  graph.py  search.py
alpnet/cli/: main.py
alpnet/config/: constants.py  settings.py
alpnet/db/: graph_store.py  vector_store.py
alpnet/ingest/: __init__.py  chunker.py  graph_builder.py  parser.py  pipeline.py  resolver.py
alpnet/models/: api.py  nodes.py
alpnet/services/: embedding_service.py  graph_service.py  llm_service.py  search_service.py
data/: knowledge_graph.json
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/effects/: ParticleBackground.tsx
frontend/components/graph/: GraphCanvas.tsx
frontend/components/layout/: BottomSearch.tsx  LeftSidebar.tsx  RightPanel.tsx
frontend/lib/: api.ts  fuse.ts
frontend/store/: index.ts
frontend/types/: index.ts
scripts/: generate_all_topics.py  generate_mechanics_topics.py  repair_content.py
vault/: index.md
vault/.obsidian/: workspace.json
vault/01-Mechanics/01-Kinematics/Displacement, Velocity and Acceleration/: Acceleration.md  Displacement and Distance.md  Displacement, Velocity and Acceleration.md  Speed and Velocity.md  Terminal Velocity.md
vault/01-Mechanics/01-Kinematics/Equations of Motion (SUVAT)/: Choosing the Right Equation.md  Free Fall Under Gravity.md  (+3 more)
vault/templates/: topic-template.md
(+445 files in other folders)
